# ELTE---GrafikusProcesszorok---2025

./: CMakeLists.txt  main.cpp
SampleCodes/CUDA/DeviceInformation/: CMakeLists.txt  DeviceInformation.cu
SampleCodes/CUDA/Histogram/: CMakeLists.txt  Histogram.cu
SampleCodes/CUDA/MatMul/: CMakeLists.txt  MatMul.cu
SampleCodes/CUDA/Reduction/: CMakeLists.txt  Reduction.cu
SampleCodes/CUDA/Saxpy/: CMakeLists.txt  Saxpy.cu
SampleCodes/CUDA/SobelFilter/: CMakeLists.txt  SobelFilter.cu
SampleCodes/OpenCL/DeviceInformation/C/: CMakeLists.txt  DeviceInformation.cpp
SampleCodes/OpenCL/DeviceInformation/Cpp/: DeviceInformation.cpp
SampleCodes/OpenCL/GameOfLife/: CMakeLists.txt  main.cpp  step.cl
SampleCodes/OpenCL/Histogram/: histogram.cl
SampleCodes/OpenCL/Histogram/C/: CMakeLists.txt  Histogram.cpp
SampleCodes/OpenCL/Histogram/Cpp/: CMakeLists.txt  Histogram.cpp
SampleCodes/OpenCL/MatMul/: cpu_matmul.h  matmul.cl
SampleCodes/OpenCL/MatMul/C/: CMakeLists.txt  MatMul.cpp
SampleCodes/OpenCL/MatMul/Cpp/: CMakeLists.txt  MatMul.cpp
SampleCodes/OpenCL/Reduction/: reduce.cl
SampleCodes/OpenCL/Reduction/C/: CMakeLists.txt  Reduction.cpp
SampleCodes/OpenCL/Reduction/Cpp/: CMakeLists.txt  Reduction.cpp
SampleCodes/OpenCL/Saxpy/: saxpy.cl
SampleCodes/OpenCL/Saxpy/C/: CMakeLists.txt  SaxpyC.cpp
SampleCodes/OpenCL/Saxpy/Cpp/: CMakeLists.txt  SaxpyCpp.cpp
SampleCodes/OpenCL/SobelFilter/: sobel.cl
SampleCodes/OpenCL/SobelFilter/C/: CMakeLists.txt  SobelFilter.cpp
SampleCodes/OpenCL/SobelFilter/Cpp/: SobelFilter.cpp
